# notebooks

./: README.md  pyproject.toml
radar/: radar.ipynb
radar/resources/: skills.ods
