[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Marko Kolarek <marko.kolarek@protonmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab-lsp = "^5.1.0"
pandas = "^2.2.2"
plotly = "^5.22.0"
odfpy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
